--- a/environment.yaml
+++ b/environment.yaml
@@ -1,14 +1,16 @@
-name: openduck_latest
+name: openduck
 channels:
   - bioconda
   - omnia
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
-  - yank=0.25.2
-  - pdbfixer=1.6
-  - openforcefield==0.7.2
-  - parmed=3.2.0
-  - cudatoolkit=10.1.243
-  - openmm=7.4.1=py37_cuda101_rc_1
+  - python=3.9
+  - yank
+  - pdbfixer
+  - openforcefield
+  - parmed
+  - cudatoolkit
+  - openmm
+  - openmmforcefields
+  - ambertools
