--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,4 @@
-name: openduck
+name: openduck_latest
 channels:
   - bioconda
   - omnia
@@ -6,11 +6,11 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - yank
-  - pdbfixer
+  - yank=0.25.2
+  - pdbfixer=1.6
   - openforcefield=0.7.2
-  - parmed
-  - cudatoolkit
+  - parmed=3.4.3
+  - cudatoolkit=11.7.0
   - openmm=7.5
-  - openmmforcefields
-  - ambertools
+  - openmmforcefields=0.7.4
+  - ambertools=22.0
