--- a/meta.yaml
+++ b/meta.yaml
@@ -1,13 +1,14 @@
 {% set name = "duck" %}
-{% set version = "0.1.3" %}
+{% set version = "0.1.4" %}
 
 package:
   name: openduck
   version: {{ version }}
 
 source:
-  url: https://github.com/simonbray/{{ name }}/archive/refs/heads/galaxy-version.tar.gz
-  sha256: 5ee0cae33c07a3c0277d7db5a0c7a7f2bcd65752a54c3910edb6fcc64623dfc2
+  url: https://github.com/galaxycomputationalchemistry/{{ name }}/archive/refs/heads/master.tar.gz
+  # url: https://github.com/galaxycomputationalchemistry/{{ name }}/archive/v{{ version }}.tar.gz
+  # sha256: 5ee0cae33c07a3c0277d7db5a0c7a7f2bcd65752a54c3910edb6fcc64623dfc2
 
 build:
   number: 0
@@ -19,7 +20,7 @@ build:
     - duck_prepare_sys=scripts.duck_prepare_sys:main
     - duck_prepare_sys_for_amber=scripts.duck_prepare_sys_for_amber:main
     - duck_smd_runs=scripts.duck_smd_runs:main
-
+    # TODO: add full set of scripts when known
 requirements:
   host:
     - python
@@ -37,7 +38,7 @@ requirements:
     - openmm=7.5
     - openmmforcefields=0.9.0
     - ambertools=22.0
-    - seaborn=0.12
+    - seaborn
 
 test:
   commands:
@@ -48,7 +49,7 @@ test:
     - get_wqb -h
 
 about:
-  home: https://github.com/galaxycomputationalchemistry/duck
+  home: https://github.com/CBDD/openduck
   license: Apache 2.0
   license_family: Apache
   license_file: LICENSE
